<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/cardView">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/cake_receipe_image"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/receipeName"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

</LinearLayout>